--- a/package.json
+++ b/package.json
@@ -1,25 +1,3 @@
-{
-  "name": "lead-scraper",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "export": "next build && next export"
-  },
-  "dependencies": {
-    "next": "^14",
-    "react": "^18",
-    "react-dom": "^18",
-    "lucide-react": "^0.263"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "typescript": "^5",
-    "tailwindcss": "^3",
-    "autoprefixer": "^10",
-    "postcss": "^8"
-  }
+"scripts": {
+  "build": "next build"
 }
